--- a/QWeatherNew_harmattan.desktop
+++ b/QWeatherNew_harmattan.desktop
@@ -3,9 +3,9 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Name=QWeather
-Exec=/usr/bin/invoker --type=d -s /opt/QWeather/bin/QWeather
-Icon=/usr/share/icons/hicolor/80x80/apps/QWeather80.png
+Name=QWeatherNew
+Exec=/usr/bin/single-instance /opt/QWeatherNew/bin/QWeatherNew
+Icon=/usr/share/icons/hicolor/80x80/apps/QWeatherNew80.png
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
