--- a/Sem/WAF2/Projekt/QWeatherNew/debian/qweathernew/usr/share/applications/QWeatherNew_harmattan.desktop
+++ b/Sem/WAF2/Projekt/QWeatherNew/debian/qweathernew/usr/share/applications/QWeatherNew_harmattan.desktop
@@ -3,9 +3,9 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Name=QWeather
-Exec=/opt/QWeather/bin/QWeather
-Icon=QWeather64
+Name=QWeatherNew
+Exec=/usr/bin/single-instance /opt/QWeatherNew/bin/QWeatherNew
+Icon=/usr/share/icons/hicolor/80x80/apps/QWeatherNew80.png
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
